--- a/Rektor_2017/rektor_2017.tex
+++ b/Rektor_2017/rektor_2017.tex
@@ -247,11 +247,11 @@ Zagreb, \the\year
 \input{Kontrola/Kontrola}
 
 \newpage
-\section{CAD model}
+\section{Mehanička konstrukcija}
 \input{CAD/CAD}
 
 \newpage
-\section{Hardwareska struktura}
+\section{Hardverska struktura}
 \input{Hardware/Hardware}
 
 \newpage
