--- a/Rektor_2017/Exp/Exp.tex
+++ b/Rektor_2017/Exp/Exp.tex
@@ -173,7 +173,7 @@
 %TODO Ubaciti sliku letjelice na gimbalu na početak poglavlja 
 U svrhu verifikacije sustava upravljanja letjelica je postavljena na stalak s jednom osi rotacije (eng. \textit{single axis gimbal}). Os rotacije stalka postavljena je što bliže centru mase letjelice kako bi se osiguralo ponašanje što sličnije letu.
 Ovim pristupom omogućeno je fino podešavanje koeficijenata regulacijskih petlji pojedinačnih osi letjelice. Kao početna točka u postupku uzeti su parametri regulatora izračunati iz matematičkog modela letjelice. Mijenjanjem koeficijenata upravljačkih petlji ispitano je ponašanje sustava na promjenu reference kuta i reakcija sustava na poremećaj. Poremećaj na letjelicu ostvaren je kao impuls vanjske sile na krak letjelice pri čemu dolazi do odmaka od zadanih vrijednosti kuta poniranja ili valjanja. Cilj postupka je pronaći dobar odnos između brzine odziva na promjenu referentne vrijednosti i kvalitete kompenzacije poremećaja. \newline 
-Opisanim postupkom podešavanja parametara odabrani su parametri regulatora prikazani u tablici \ref{tab:reg_param}.
+Opisanim postupkom podešavanja parametara odabrani su parametri regulatora prikazani u Tablici \ref{tab:reg_param}.
 
 \setlength\extrarowheight{1pt}
 \begin{table}[H]
@@ -184,7 +184,7 @@ Opisanim postupkom podešavanja parametara odabrani su parametri regulatora prik
 		\hline
 		\multicolumn{3}{|c||}{Vanjska petlja} & \multicolumn{3}{c|}{Unutarnja petlja} \\ \hline
 		P    \hfill       & I    \hfill    & D    \hfill       & P     \hfill     & I       \hfill     & D        \\ \hline
-		1.3    \hfill     & 0     \hfill   & 0.03   \hfill     & 1.3      \hfill   & 0.07     \hfill    & 0        \\ \hline
+		1.3    \hfill     & 0     \hfill   & 0.03   \hfill     & 0.1083      \hfill   & 0.00583     \hfill    & 0        \\ \hline
 	\end{tabular}
 \end{table}
 
@@ -193,7 +193,7 @@ Nakon odabira parametara regulatora provedena su tri eksperimenta prikazana u na
 \subsection{Eksperiment odskočne pobude}
 
 U ovom eksperimentu zadana je odskočna referenca kuta iznosa $\theta_{ref}=0.15 \hspace{5 pt} rad$ u pozitivnom i negativnom smjeru. Snimljeni odziv kuta letjelice prikazan je na Slici \ref{fig:step_kut_odziv}, a odziv kutne brzine prikazan je na Slici \ref{fig:step_brzina_odziv}. Vrijeme porasta
-odziva na skokovitu promjenu reference iznosi $0.4155$ sekundi dok letjelica dostiže postavljenu vrijednost za $3.6384$ sekunde. Nadvišenje odziva na skokovitu pobudu iznosi $2.26 \hspace{2 pt} \%$ Slika \ref{fig:step_brzina_odziv} prikazuje impulsne promjene kutne brzine što potvrđuje brzinu odziva na skokovitu pobudu. Reakcija letjelice na promjenu reference je zadovoljavajuće brza za potrebe stabilnog leta. 
+odziva na skokovitu promjenu reference iznosi $0.4155$ sekundi dok letjelica dostiže postavljenu vrijednost za $3.6384$ sekunde. Nadvišenje odziva na skokovitu pobudu iznosi $2.26 \hspace{2 pt} \%$. Slika \ref{fig:step_brzina_odziv} prikazuje impulsne promjene kutne brzine što potvrđuje brzinu odziva na skokovitu pobudu. Reakcija letjelice na promjenu reference zadovoljavajuće je brza za potrebe stabilnog leta. 
 
 \begin{figure}[H]
 	\centering
@@ -216,7 +216,7 @@ odziva na skokovitu promjenu reference iznosi $0.4155$ sekundi dok letjelica dos
 
 \subsection{Eksperiment sinusne pobude}
 Ovim eksperimentom ispituje se sposobnost praćenja kontinuirano promjenljivog referentnog signala kuta. 
-Zadana je referenca kuta kao sinusni signal amplitude $0.15 \hspace{5 pt} rad$ i perioda $6.5$ sekundi. Snimljeni odzivi kuta i kutne brzine letjelice prikazani na slici \ref{fig:sinus_odzivi}.
+Zadana je referenca kuta kao sinusni signal amplitude $0.15 \hspace{5 pt} rad$ i perioda $6.5$ sekundi. Snimljeni odzivi kuta i kutne brzine letjelice prikazani na Slici \ref{fig:sinus_odzivi}.
 \begin{figure}[H]
 	\centering
 	\begin{subfigure}{.5\textwidth}
@@ -241,7 +241,7 @@ Zadana je referenca kuta kao sinusni signal amplitude $0.15 \hspace{5 pt} rad$ i
 \subsection{Eksperiment upravljanja kutom uz uključene rotore}
 Prethodnim eksperimentima ispitano je ponašanje sustava upravljanja uz isključene rotore. Uspješnim izvođenjem prethodnih eksperimenata, ispitano je ponašanje sustava upravljanja uz potisak koji stvara rotacija četiri rotora letjelice. \newline
 Eksperiment je izveden tako da operater pomoću upravljačke konzole uključi rotore i podigne njihovu brzinu rotacije. Pri tome se prati uspješnost stabilizacije letjelice na poremećaj koji stvara potisak rotora. Zatim operater daje referencu kuta poniranja koja se sastoji od sekvence pozitivnog i negativnog pomaka iznosa $0.15 \hspace{5pt} rad$. Slika \ref{fig:rot_odzivi} prikazuje odziv kuta i kutne brzine uz opisanu referencu kuta.
-Iz snimljenih odziva vidljivo je da sustav upravljanja zadržava stabilnost uz uključene rotore, ali je utjecaj rotora prisutan u odzivu. Brzina odziva na skokovitu promjenu reference nije narušena utjecajem rotora.
+Iz snimljenih odziva vidljivo je da sustav upravljanja zadržava stabilnost uz uključene rotore, ali je utjecaj rotora prisutan u odzivu. Brzina odziva na skokovitu promjenu reference nije narušena utjecajem rotora, ali su zbog vibracija rotora signali zašumljeniji.
 
 \begin{figure}[H]
 	\centering
